<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_map"
        android:tint="@android:color/white"
        />

    <EditText
        android:id="@+id/user"
        style="@style/LoginEditText"
        android:hint="@string/email"
        android:inputType="text"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/password"
        style="@style/LoginEditText"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:drawableRight="@drawable/ic_visibility_black_24dp"
        android:drawableTint="@color/darkGrey"/>

    <Button
        android:id="@+id/signIn"
        style="@style/LoginButton"
        android:text="@string/action_sign_in" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_register"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:layout_gravity="center|bottom"/>




</LinearLayout>
