<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.monstershore.maraudersmap.view.ui.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/name"
            style="@style/LoginEditText"
            android:layout_marginTop="80dp"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:drawableTint="@color/darkGrey"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            style="@style/LoginEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawableTint="@color/darkGrey"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            style="@style/LoginEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawableTint="@color/darkGrey"
            android:hint="@string/password"
            android:inputType="textVisiblePassword" />

        <Button
            android:id="@+id/register"
            style="@style/LoginButton"
            android:text="@string/action_register" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="60dp"
            android:visibility="invisible"
            tools:visibility="visible" />
    </LinearLayout>

</LinearLayout>
